# all_purpuse_visualizer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  setup.sh
apps/: CMakeLists.txt  apv_test.cpp
lib/: CMakeLists.txt
lib/include/apv/backends/: backend_concept.hpp
lib/include/apv/backends/imgui/: imgui_backend.hpp
lib/include/apv/gui/: application.hpp  menu.hpp  window.hpp
lib/include/apv/utils/: concepts.hpp  log.hpp
lib/src/backends/imgui/: imgui_backend.cpp
lib/src/gui/: application.cpp
lib/src/utils/: log.cpp
